@@ -18,7 +18,7 @@
  - PERFORMANCE OF THIS SOFTWARE.
 -->
 
-<!-- File: $Id: Bv9ARM-book.xml,v 1.287 2006/01/05 00:01:46 marka Exp $ -->
+<!-- File: $Id: Bv9ARM-book.xml,v 1.288 2006/01/05 02:19:02 marka Exp $ -->
 <book xmlns:xi="http://www.w3.org/2001/XInclude">
   <title>BIND 9 Administrator Reference Manual</title>
 
@@ -4493,6 +4493,8 @@ category notify { null; };
     <optional> empty-contact <replaceable>name</replaceable> ; </optional>
     <optional> empty-zones-enable <replaceable>yes_or_no</replaceable> ; </optional>
     <optional> disable-empty-zone <replaceable>zone_name</replaceable> ; </optional>
+    <optional> zero-no-soa-ttl <replaceable>yes_or_no</replaceable> ; </optional>
+    <optional> zero-no-soa-ttl-cache <replaceable>yes_or_no</replaceable> ; </optional>
 };
 </programlisting>
 
@@ -5585,6 +5587,27 @@ options {
 		  When performing integrity checks also check that
 		  sibling glue exists.  The default is <command>yes</command>.
 		</para>
+	      </listitem>
+	    </varlistentry>
+
+	    <varlistentry>
+	      <term><command>zero-no-soa-ttl</command><term>
+	      <listitem>
+	        <para>
+		  When returning authoritative negative responses to
+		  SOA queries set the TTL of the SOA recored returned in
+		  the authority section to zero.  Default yes.
+	        </para>
+	      </listitem>
+	    </varlistentry>
+
+	    <varlistentry>
+	      <term><command>zero-no-soa-ttl-cache</command><term>
+	      <listitem>
+	        <para>
+		  When caching a negative response to a SOA query
+		  set the TTL to zero.  Default no.
+	        </para>
 	      </listitem>
 	    </varlistentry>
           </variablelist>
@@ -7932,6 +7955,7 @@ view "external" {
     <optional> max-retry-time <replaceable>number</replaceable> ; </optional>
     <optional> multi-master <replaceable>yes_or_no</replaceable> ; </optional>
     <optional> key-directory <replaceable>path_name</replaceable>; </optional>
+    <optional> zero-no-soa-ttl <replaceable>yes_or_no</replaceable> ; </optional>
 
 }</optional>;
 </programlisting>
@@ -8323,6 +8347,16 @@ view "external" {
                   <para>
                     See the description of
                     <command>check-sibling</command> in <xref linkend="boolean_options"/>.
+                  </para>
+                </listitem>
+              </varlistentry>
+
+              <varlistentry>
+                <term><command>zero-no-soa-ttl</command></term>
+                <listitem>
+                  <para>
+                    See the description of
+                    <command>zero-no-soa-ttl</command> in <xref linkend="boolean_options"/>.
                   </para>
                 </listitem>
               </varlistentry>
